--- a/github-action.yml
+++ b/github-action.yml
@@ -1,6 +1,9 @@
 name: Terraform Drift Detection Workflow
 description: 'This GitHub Action runs Terraform plan on the specified environment, and check for drifts.'
 author: 'delivops'
+branding: 
+  icon: 'check-square’ (You could choose from number of options available)
+  color: 'green'
 
 on:
   workflow_dispatch:
@@ -22,22 +25,19 @@ on:
         description: 'AWS role to assume'
         required: true
 
-jobs: 
-  terraform-drift:
-    name: 'Terraform Drift Detection'
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        shell: bash
-        working-directory: ${{ inputs.working_directory }}    
-    env:
-      ARM_SKIP_PROVIDER_REGISTRATION: true
-      AWS_REGION: ${{ inputs.aws_region }}
-      AWS_ROLE: ${{ inputs.aws_role }}
-    outputs:
+runs:
+  using: composite
+  defaults:
+    run:
+      shell: bash
+      working-directory: ${{ inputs.working_directory }}    
+  env:
+    ARM_SKIP_PROVIDER_REGISTRATION: true
+    AWS_REGION: ${{ inputs.aws_region }}
+    AWS_ROLE: ${{ inputs.aws_role }}
+  outputs:
       tfplanExitCode: ${{ steps.tf-plan.outputs.exitcode }}
-
-    steps:
+  steps:
     - name: Checkout the repository to the GitHub Actions runner
       uses: actions/checkout@v4
 
