--- a/action.yml
+++ b/action.yml
@@ -38,33 +38,37 @@ runs:
     - name: Checkout the repository to the GitHub Actions runner
       uses: actions/checkout@v4
       shell: bash
-      working-directory: ${{ inputs.working_directory }}
+      with:
+        working-directory: ${{ inputs.working_directory }}
       
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v3
       with:
+        working-directory: ${{ inputs.working_directory }}
         terraform_wrapper: false
       shell: bash
-      working-directory: ${{ inputs.working_directory }}
+
       
     - name: Configure AWS credentials via OIDC
       id: auth
       uses: aws-actions/configure-aws-credentials@v4
-      shell: bash
-      working-directory: ${{ inputs.working_directory }}      
+      shell: bash  
       with:
+        working-directory: ${{ inputs.working_directory }}    
         aws-region: ${{ inputs.aws_region }}
         role-to-assume: "arn:aws:iam::${{ inputs.aws_account_id }}:role/${{ inputs.aws_role }}"
 
     - name: Terraform Init
       run: terraform init
       shell: bash
-      working-directory: ${{ inputs.working_directory }}      
+      with: 
+        working-directory: ${{ inputs.working_directory }}      
 
     - name: Terraform Plan
       id: tf-plan
       shell: bash
-      working-directory: ${{ inputs.working_directory }}      
+      with: 
+        working-directory: ${{ inputs.working_directory }}       
       run: |
         export exitcode=0
         terraform plan -detailed-exitcode -no-color -out tfplan || export exitcode=$?
@@ -81,15 +85,16 @@ runs:
     - name: Publish Terraform Plan
       uses: actions/upload-artifact@v4
       shell: bash
-      working-directory: ${{ inputs.working_directory }}      
       with:
         name: tfplan
         path: tfplan
+        working-directory: ${{ inputs.working_directory }}      
         
     - name: Create String Output
       id: tf-plan-string
       shell: bash
-      working-directory: ${{ inputs.working_directory }}      
+      with:
+        working-directory: ${{ inputs.working_directory }}      
       run: |
         TERRAFORM_PLAN=$(terraform show -no-color tfplan)
         delimiter="$(openssl rand -hex 8)"
@@ -104,7 +109,8 @@ runs:
         
     - name: Publish Terraform Plan to Task Summary
       shell: bash
-      working-directory: ${{ inputs.working_directory }}    
+      with:
+        working-directory: ${{ inputs.working_directory }}    
       env:
         SUMMARY: ${{ steps.tf-plan-string.outputs.summary }}
       run: |
@@ -116,10 +122,10 @@ runs:
       if: steps.tf-plan.outputs.exitcode == 2
       uses: actions/github-script@v7
       shell: bash
-      working-directory: ${{ inputs.working_directory }}      
       env:
         SUMMARY: "${{ steps.tf-plan-string.outputs.summary }}"
       with:
+        working-directory: ${{ inputs.working_directory }}      
         github-token: ${{ inputs.github_token }}
         script: |
           const body = `${process.env.SUMMARY}`;
@@ -161,10 +167,10 @@ runs:
     - name: Close Drift Issue if No Changes
       if: steps.tf-plan.outputs.exitcode == 0
       shell: bash
-      working-directory: ${{ inputs.working_directory }}      
       uses: actions/github-script@v7
       with:
         github-token: ${{ inputs.github_token }}
+        working-directory: ${{ inputs.working_directory }}      
         script: |
           const title = 'Drift Detection In Global';
           const creator = 'github-actions[bot]'
@@ -194,7 +200,8 @@ runs:
       if: steps.tf-plan.outputs.exitcode == 2
       uses: rtCamp/action-slack-notify@v2.3.0
       shell: bash
-      working-directory: ${{ inputs.working_directory }}      
+      with:
+        working-directory: ${{ inputs.working_directory }}      
       env:
         SLACK_COLOR: "#ff0000"
         SLACK_MESSAGE: ":warning: *Terraform Drift Detected* :warning:"
@@ -202,10 +209,10 @@ runs:
         
     - name: Publish Failed Drift Report
       shell: bash
-      working-directory: ${{ inputs.working_directory }}    
       if: failure()
       uses: actions/github-script@v7
       with:
+        working-directory: ${{ inputs.working_directory }}    
         github-token: ${{ inputs.github_token }}
         script: |
           const title = 'Drift Detection in ${{ inputs.environment }}';
@@ -242,7 +249,8 @@ runs:
           
     - name: Slack Notification of failure
       shell: bash
-      working-directory: ${{ inputs.working_directory }}    
+      with:
+        working-directory: ${{ inputs.working_directory }}    
       if: failure()
       uses: rtCamp/action-slack-notify@v2.3.0
       env:
