--- a/action.yml
+++ b/action.yml
@@ -71,7 +71,7 @@ runs:
       uses: actions/upload-artifact@v4
       with:
         name: tfplan
-        path: tfplan
+        path: ${{ inputs.working_directory }}/tfplan
         
     - name: Create String Output
       id: tf-plan-string
