--- a/action.yml
+++ b/action.yml
@@ -71,7 +71,7 @@ runs:
       uses: actions/upload-artifact@v4
       with:
         name: tfplan
-        path: ${{ inputs.working_directory }}/tfplan
+        path: tfplan
         
     - name: Create String Output
       id: tf-plan-string
@@ -80,14 +80,17 @@ runs:
       run: |
         TERRAFORM_PLAN=$(terraform show -no-color tfplan)
         delimiter="$(openssl rand -hex 8)"
-        echo "summary<<${delimiter}" >> $GITHUB_OUTPUT
-        echo "## Terraform Plan Output for environment ${{ inputs.environment }}" >> $GITHUB_OUTPUT
-        echo "<details><summary>Click to expand</summary>" >> $GITHUB_OUTPUT
-        echo '```terraform' >> $GITHUB_OUTPUT
-        echo "$TERRAFORM_PLAN" >> $GITHUB_OUTPUT
-        echo '```' >> $GITHUB_OUTPUT
-        echo "</details>" >> $GITHUB_OUTPUT
-        echo "${delimiter}" >> $GITHUB_OUTPUT
+        
+        {
+          echo "summary<<${delimiter}"
+          echo "## Terraform Plan Output for environment ${{ inputs.environment }}"
+          echo "<details><summary>Click to expand</summary>"
+          echo '```terraform'
+          printf "%s\n" "$TERRAFORM_PLAN"
+          echo '```'
+          echo "</details>"
+          echo "${delimiter}"
+        } >> $GITHUB_OUTPUT
         
     - name: Publish Terraform Plan to Task Summary
       shell: bash
